--- a/templates/treatment.html
+++ b/templates/treatment.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body class="sub_page">
+<body>
 
   <div class="hero_area">
     <!-- header section strats -->
@@ -70,9 +70,9 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="{% url 'home' %}">
-              <img src="/static//static//static/images/logo.png" alt="">
+              <img src="/static/images/logo.png" alt="">
             </a>
-            </a>
+
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
@@ -81,10 +81,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
                 <ul class="navbar-nav  ">
-                  <li class="nav-item ">
+                  <li class="nav-item active">
                     <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item active">
+                  <li class="nav-item">
                     <a class="nav-link" href="{% url 'about' %}"> About</a>
                   </li>
                   <li class="nav-item">
@@ -126,8 +126,6 @@
       </div>
     </header>
     <!-- end header section -->
-  </div>
-
 
 
   <!-- treatment section -->
